V.16.2.0
----------
- [PATCH] Use v2.0 url for OpenID Client (#2208)
- [MINOR] Added passkey protocol header (behind a flag) (#2181)
- [MINOR] Fix crash during onCreate() (#2202)
- [MINOR] add removeUserLegacy method in MsalTestApp infra (#2212)
- [PATCH] Always validate calling app's redirect URI (#2211)
- [MINOR] Updating JSON version (#2221)
- [PATCH] Passing span context to AuthorizationActivity (#2209)
- [MINOR] Bumping Moshi versions; force setting Okio version (#2210)
- [PATCH] Fix to generate new Asymmetric Key (#2222)

V.16.1.1
----------
- [PATCH] Fix client Discovery (#2213)

V.16.1.0
----------
- [MINOR] Handle crypto error gracefully (#2190)
- [MINOR] Stop logging thread name (#2185)
- [MINOR] Adding Moshi, and WebAuthnJsonUtil (#2189)

V.16.0.1
----------
- [MINOR] Add LTW as prod broker app (#2179)

V.16.0.0
----------
- [MINOR] Add MsaGrantedRefreshTokenNotSupportedOnAadTenant error code to ServiceException (#2165)
- [MAJOR] Separate Broker API and Client SDK Active Broker caches (#2164)
- [MINOR] Deprecate Common logger wrapper (#2157)
- [PATCH] Fix NPE in OTEL code for DCF flow (#2139)
- [PATCH] Fixed debug apps not recognized as active broker issue (#2138)
- [MAJOR] Update active broker cache upon returned result (#2140)
- [MINOR] Update TokenRequest.java with NAA params (#2143)
- [MAJOR] handle broker discovery disabled on SDK side (#2145)
- [MINOR] Refactored OneAuthTestApp infra in order to process LTW test cases (#2136)
- [MINOR] Add checkMode method to msaltestapp infra (#2141)
- [MINOR] Updated target, compile sdk, AGP and gradle versions  (#2142)
- [MINOR] Add new apk name to BrokerHost infra (#2152)
- [MINOR] Send key to request broker data in all BrokerOperationBundle (#2159)
- [MINOR] Catch strongbox exception on Android 14 (#2158)
- [MINOR] Nested app auth implementation (#2168)

V.15.0.0
----------
- [MAJOR] Move Broker side active broker cache to broker repo (#2123)